<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_bank" />
    </ScrollView>

    <!--    overlay-->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_login" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="50dp">

            <!--    type du compte-->
            <TextView
                android:id="@+id/title"
                style="@style/title"
                android:layout_height="wrap_content"
                android:text="@string/connectez_vous"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/label_identifiant"
                style="@style/label"
                android:layout_marginTop="70dp"
                android:text="@string/identifiant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <EditText
                android:id="@+id/field_identifiant"
                style="@style/hint"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="12dp"
                android:text="ikram.makhloufi@gmail.com"
                android:hint="@string/votre_identifiant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_identifiant" />


            <!--    Email-->
            <TextView
                android:id="@+id/label_mdp"
                style="@style/label"
                android:layout_marginTop="30dp"
                android:text="@string/mot_de_passe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/field_identifiant" />

            <EditText
                android:id="@+id/field_mdp"
                style="@style/hint"
                android:layout_marginHorizontal="25dp"
                android:hint="@string/votre_mot_de_passe"
                android:text="kW2^X^U8N"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_mdp" />

            <!--    enregistrer-->
            <Button
                android:id="@+id/btn_login"
                style="@style/Big_Btn"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="60dp"
                android:onClick="login"
                android:text="@string/se_connecter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/field_mdp" />

            <TextView
                android:id="@+id/login_feedback_view"
                style="@style/label"
                android:textStyle="normal"
                android:textColor="@android:color/holo_red_light"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</RelativeLayout>
