<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center">


    <!--    nom & prenom-->
    <LinearLayout
        android:id="@+id/layout_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_nom"
            style="@style/label"
            android:layout_width="120dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/nom" />

        <TextView
            android:id="@+id/field_nom"
            style="@style/grid_field_text"
            android:layout_width="0dp" />


    </LinearLayout>

    <!--   prenom-->
    <LinearLayout
        android:id="@+id/layout_prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_below="@+id/layout_nom">

        <TextView
            android:id="@+id/label_prenom"
            style="@style/label"
            android:layout_width="120dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/prenom" />

        <TextView
            android:id="@+id/field_prenom"
            style="@style/grid_field_text"
            android:layout_width="0dp" />


    </LinearLayout>

    <!--    Email-->
    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_prenom"
        android:layout_marginHorizontal="25dp">

        <TextView
            android:id="@+id/label_email"
            style="@style/label"
            android:layout_width="120dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/email" />

        <TextView
            android:id="@+id/field_email"
            style="@style/grid_field_text"
            android:layout_width="0dp" />


    </LinearLayout>

    <!--    Telephone-->
    <LinearLayout
        android:id="@+id/layout_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_email"
        android:layout_marginHorizontal="25dp">

        <TextView
            android:id="@+id/label_tel"
            style="@style/label"
            android:layout_width="120dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/telephone" />

        <TextView
            android:id="@+id/field_tel"
            style="@style/grid_field_text"
            android:layout_width="0dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btns"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_tel"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="25dp">

<!--        <Button-->
<!--            android:id="@+id/btn_historique"-->
<!--            style="@style/Big_Btn"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_margin="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:elevation="10dp"-->
<!--            android:paddingHorizontal="10dp"-->
<!--            android:text="@string/historique"-->
<!--            android:textSize="14sp" />-->

        <Button
            android:id="@+id/btn_logout"
            style="@style/Big_Btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_white"
            android:paddingHorizontal="10dp"
            android:elevation="10dp"
            android:text="@string/se_deconnecter"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp" />


    </LinearLayout>


    <!--    Historique Button-->


</RelativeLayout>
