<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormActivity">


    <!--    BG-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_bank" />
    </ScrollView>

    <!--    overlay-->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_form" />


    <!--    toolbar-->
    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            style="@style/arrow_back"
            android:onClick="back" />

        <TextView
            style="@style/title"
            android:text="@string/nouveau_compte_de_paiement"
            android:textSize="22sp" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="50dp">

            <!--    type du compte-->
            <TextView
                android:id="@+id/label_type_du_compte"
                style="@style/label"
                android:text="@string/type_du_compte"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radio_type_compte"
                style="@style/toolbar"
                android:layout_marginHorizontal="15dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_type_du_compte">

                <RadioButton
                    android:id="@+id/radio_200"
                    style="@style/radio_button"
                    android:text="200" />

                <RadioButton
                    android:id="@+id/radio_5000"
                    style="@style/radio_button"
                    android:text="5 000" />

                <RadioButton
                    android:id="@+id/radio_20000"
                    style="@style/radio_button"
                    android:text="20 000" />

            </RadioGroup>


            <!--    nom & prenom-->


            <!--    telephone-->

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_marginTop="30dp"
                android:columnCount="2"
                android:rowCount="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_type_compte">

                <TextView
                    android:id="@+id/label_nom"
                    style="@style/label"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/nom" />

                <TextView
                    android:id="@+id/label_prenom"
                    style="@style/label"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/prenom" />

                <EditText
                    android:id="@+id/field_nom"
                    style="@style/hint"
                    android:layout_width="150dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:hint="Le nom" />

                <EditText
                    android:id="@+id/field_prenom"
                    style="@style/hint"
                    android:layout_width="150dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:hint="Le prénom" />


            </GridLayout>

            <TextView
                android:id="@+id/label_tel"
                style="@style/label"
                android:layout_marginTop="30dp"
                android:text="@string/telephone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

            <EditText
                android:id="@+id/field_tel"
                style="@style/hint"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="12dp"
                android:hint="@string/le_num_tel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_tel" />


            <!--    Email-->
            <TextView
                android:id="@+id/label_email"
                style="@style/label"
                android:layout_marginTop="30dp"
                android:text="Email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/field_tel" />

            <EditText
                android:id="@+id/field_email"
                style="@style/hint"
                android:layout_marginHorizontal="25dp"
                android:hint="@string/l_email_du_client"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_email" />

            <!--    enregistrer-->
            <Button
                android:id="@+id/btn_enregistrer"
                style="@style/Big_Btn"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="60dp"
                android:text="Enregistrer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/field_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
